--- a/gitlab/.gitlab-ci.yml
+++ b/gitlab/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: ctcampbelldocker/veracode-ci-examples
+image: veracode/api-wrapper-java
 
 stages:
     - archive
@@ -17,9 +17,7 @@ veracode-policy-scan:
     only:
         - schedules
         - master
-    before_script:
-        - wget -q -O veracode-wrapper.jar https://repo1.maven.org/maven2/com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/${VERACODE_WRAPPER_VERSION}/vosp-api-wrappers-java-${VERACODE_WRAPPER_VERSION}.jar
     script:
-        - java -jar veracode-wrapper.jar -vid ${TEAM_ANALYSISCENTER_ID} -vkey ${TEAM_ANALYSISCENTER_KEY}
+        - java -jar /opt/veracode/api-wrapper.jar -vid ${TEAM_ANALYSISCENTER_ID} -vkey ${TEAM_ANALYSISCENTER_KEY}
           -action UploadAndScan -appname "${CI_PROJECT_NAME}" -createprofile true -autoscan true
           -filepath veracode.zip -version "job ${CI_JOB_ID} in pipeline ${CI_PIPELINE_ID}"
